--- a/web-h/views/index.ejs
+++ b/web-h/views/index.ejs
@@ -12,6 +12,7 @@
   <div class="box" id="heading">
     <a href="/">
       <h1><%= locals.currentTime %></h1>
+      <h1><%= locals.shopName %></h1>
     </a>
   </div>
 
