--- a/web-h/views/login.ejs
+++ b/web-h/views/login.ejs
@@ -15,11 +15,11 @@
 
   <div class="box" id="service-list">
     <form id="myForm" method="post">      
-          <input type="text" id="" name="userName" placeholder="user name" autocomplete="off" required="true">
-          <input type="password" id="" name="userPassword" placeholder="password" autocomplete="off" required="true">
+          <input type="text" id="username" name="username" placeholder="user name" autocomplete="off" required="true">
+          <input type="password" id="current-password" name="password" placeholder="password" autocomplete="off" required="true">
 
           <label for="submit"></label>
-          <input id="submit" type="submit" value="Logon" formaction="/logon">
+          <input id="submit" type="submit" value="Login" formaction="/login">
         </form>
   </div>
 
